# nrf52-ble-template-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
application/pca10040_s132/: CMakeLists.txt
bootloader/pca10040_s132/: CMakeLists.txt
sdk/components/toolchain/gcc/: Makefile.posix
